--- a/Sonar Response Manuscript/bibliography.bib
+++ b/Sonar Response Manuscript/bibliography.bib
@@ -205,7 +205,7 @@ Swimming efficiencies of fish and cetaceans have been related to a certain synch
 	file = {Full Text PDF:/Users/frank/Zotero/storage/R89QCGJD/Rohr and Fish - 2004 - Strouhal numbers and optimization of swimming by o.pdf:application/pdf;Snapshot:/Users/frank/Zotero/storage/XMG3YSR6/1633.html:text/html}
 }
 
-@article{sato_katsufumi_stroke_2007,
+@article{katsufumi_stroke_2007,
 	title = {Stroke frequency, but not swimming speed, is related to body size in free-ranging seabirds, pinnipeds and cetaceans},
 	volume = {274},
 	url = {https://royalsocietypublishing.org/doi/full/10.1098/rspb.2006.0005},
@@ -215,7 +215,7 @@ Swimming efficiencies of fish and cetaceans have been related to a certain synch
 	number = {1609},
 	journaltitle = {Proceedings of the Royal Society B: Biological Sciences},
 	shortjournal = {Proceedings of the Royal Society B: Biological Sciences},
-	author = {{Sato Katsufumi} and {Watanuki Yutaka} and {Takahashi Akinori} and {Miller Patrick J.O} and {Tanaka Hideji} and {Kawabe Ryo} and {Ponganis Paul J} and {Handrich Yves} and {Akamatsu Tomonari} and {Watanabe Yuuki} and {Mitani Yoko} and {Costa Daniel P} and {Bost Charles-André} and {Aoki Kagari} and {Amano Masao} and {Trathan Phil} and {Shapiro Ari} and {Naito Yasuhiko}},
+	author = {Katsufumi, Sato and Yutaka, Watanuki and Akinori, Takahashi and J.O, Miller Patrick and Hideji, Tanaka and Ryo, Kawabe and J, Ponganis Paul and Yves, Handrich and Tomonari, Akamatsu and Yuuki, Watanabe and Yoko, Mitani and P, Costa Daniel and Charles-André, Bost and Kagari, Aoki and Masao, Amano and Phil, Trathan and Ari, Shapiro and Yasuhiko, Naito},
 	urldate = {2019-03-18},
 	date = {2007-02-22},
 	file = {Full Text PDF:/Users/frank/Zotero/storage/MQMTFDX3/Sato Katsufumi et al. - 2007 - Stroke frequency, but not swimming speed, is relat.pdf:application/pdf;Snapshot:/Users/frank/Zotero/storage/6J5WVX5E/rspb.2006.html:text/html}
@@ -257,7 +257,7 @@ Swimming efficiencies of fish and cetaceans have been related to a certain synch
 	file = {England et al. - 2001 - Joint interim report Bahamas marine mammal strandi.pdf:/Users/frank/Zotero/storage/9PSGIYZS/England et al. - 2001 - Joint interim report Bahamas marine mammal strandi.pdf:application/pdf}
 }
 
-@article{wensveen_paul_j._northern_2019,
+@article{wensveen_northern_2019,
 	title = {Northern bottlenose whales in a pristine environment respond strongly to close and distant navy sonar signals},
 	volume = {286},
 	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2018.2592},
@@ -267,7 +267,7 @@ Swimming efficiencies of fish and cetaceans have been related to a certain synch
 	number = {1899},
 	journaltitle = {Proceedings of the Royal Society B: Biological Sciences},
 	shortjournal = {Proceedings of the Royal Society B: Biological Sciences},
-	author = {{Wensveen Paul J.} and {Isojunno Saana} and {Hansen Rune R.} and {von Benda-Beckmann Alexander M.} and {Kleivane Lars} and {van IJsselmuide Sander} and {Lam Frans-Peter A.} and {Kvadsheim Petter H.} and {DeRuiter Stacy L.} and {Curé Charlotte} and {Narazaki Tomoko} and {Tyack Peter L.} and {Miller Patrick J. O.}},
+	author = {Wensveen, Paul J. and Saana, Isojunno and Hansen, Rune R. and von Benda-Beckmann, Alexander M. and Kleivane, Lars and van {IJsselmuide}, Sander and Lam, Frans-Peter A. and Kvadsheim, Petter H. and {DeRuiter}, Stacy L. and Curé, Charlotte and Narazaki, Tomoko and Tyack, Peter L. and Miller, Patrick J.O.},
 	urldate = {2019-03-23},
 	date = {2019-03-27},
 	file = {Full Text PDF:/Users/frank/Zotero/storage/GHBLIVSB/Wensveen Paul J. et al. - 2019 - Northern bottlenose whales in a pristine environme.pdf:application/pdf;Snapshot:/Users/frank/Zotero/storage/R8KAQDXL/rspb.2018.html:text/html}
