--- a/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
+++ b/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
@@ -201,10 +201,15 @@ exposure.
 (\(P_{in}\))}{Consumption power (P\_\{in\})}}\label{consumption-power-p_in}
 
 The rate of energy intake is the product of feeding rate (\(r_f\)) and
-prey energy per feeding event (\(E_p\)). \(r_f\) was calculated as the
-lunge rate for rorquals and buzz rate for odontocetes using tag sensors.
-\(E_p\) was derived using active acoustics (rorquals) and stomach
-contents (odontocetes) {[}ref?{]}.
+prey energy per feeding event (\(E_p\)):
+
+\begin{align}
+P_{in} = r_f \times E_p
+\end{align}
+
+\(r_f\) was calculated as the lunge rate for rorquals and buzz rate for
+odontocetes using tag sensors. \(E_p\) was derived using active
+acoustics (rorquals) and stomach contents (odontocetes) {[}ref?{]}.
 
 \subsection{\texorpdfstring{Flight power
 (\(P_{out}\))}{Flight power (P\_\{out\})}}\label{flight-power-p_out}
@@ -307,6 +312,10 @@ feeders consumed the most energy per feeding event. Generally,
 delphinids targeted more energy-rich prey than Ziphids (Fig.
 \ref{Ep_fig}).
 
+Modeled consumption power covered four orders of magnitude: from 2.4e3
+kJ/hr (\emph{P. phocoena}) to 1.4e7 kJ/hr (\emph{B. musculus}) (Fig.
+\ref{Pin_fig}).
+
 \subsection{\texorpdfstring{Flight power
 (\(P_{out}\))}{Flight power (P\_\{out\})}}\label{flight-power-p_out-1}
 
@@ -319,6 +328,12 @@ delphinids targeted more energy-rich prey than Ziphids (Fig.
 \includegraphics{Sonar_Response_Manuscript_files/figure-latex/unnamed-chunk-2-1.pdf}
 \caption{Energy per feeding event. Note log scale on y-axis.
 \label{Ep_fig}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Sonar_Response_Manuscript_files/figure-latex/unnamed-chunk-3-1.pdf}
+\caption{Modeled consumption power (\(P_{in}\)). \label{Pin_fig}}
 \end{figure}
 
 \section*{References}\label{references}
